step3-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rickandmorty
  name: rickandmorty-api
  labels:
    app: rickandmorty-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rickandmorty-api
  template:
    metadata:
      labels:
        app: rickandmorty-api
    spec:
      containers:
      - name: rickandmorty-api
        image: danarus351/rickandmorty-api
        ports:
        - containerPort: 5000
